kubernetes/apps/monitoring/elastic/app/elastic-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
  #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  hajimari.io/enable: "true"
  hajimari.io/icon: simple-icons:elasticsearch
  #nginx.ingress.kubernetes.io/auth-url: http://authelia.kube-system.svc.cluster.local/api/verify
  #nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}
  labels:
    app: elastic
  name: elastic
  namespace: monitoring
spec:
  enabled: true
  ingressClassName: nginx
  rules:
  - host: "elastic.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: elastic-es-http
            port:
              number: 9200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "elastic.${SECRET_DOMAIN}"
