kubernetes/apps/monitoring/elastic/app/kibana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
  #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  hajimari.io/enable: "true"
  hajimari.io/icon: simple-icons:kibana
  #hajimari.io/group: "Public"
  #nginx.ingress.kubernetes.io/auth-url: http://authelia.kube-system.svc.cluster.local/api/verify
  #nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}
  labels:
    app: elk
  name: kibana
  namespace: monitoring
spec:
  ingressClassName: internal
  rules:
  - host: &host "kibana.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: elk-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *host
    #secretName: kibana-tls
